[package]
name = "ecosystem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.8.3", features = ["http2", "query", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
opentelemetry-otlp = { version = "0.29.0", features = ["tonic", "grpc-tonic"] }
opentelemetry = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
tracing-opentelemetry = "0.30.0"
derive_builder = "0.20.2"
chrono = "0.4.40"
derive_more = { version = "2.0.1", features = ["add", "display", "from", "into"] }
