[package]
name = "ecosystem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
axum = { version = "0.8.3", features = ["http2", "query", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
opentelemetry-otlp = { version = "0.29.0", features = ["tonic", "grpc-tonic"] }
opentelemetry = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
tracing-opentelemetry = "0.30.0"
derive_builder = "0.20.2"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["add", "display", "from", "into"] }
strum = { version = "0.27.1", features = ["derive"] }
b64 = "0.4.0"
base64 = "0.22.1"
serde_with = "3.12.0"
bytes = "1.10.1"
blake3 = "1.8.1"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
features = "0.10.0"
futures = "0.3.31"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-rustls"] }
log = "0.4.27"
nanoid = "0.4.0"
